added analytics route ,refractor the controllers