@@ -4,6 +4,7 @@ import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
@@ -11,6 +12,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.List;
 
 @Component
 public class JwtAuthFilter extends OncePerRequestFilter {
@@ -28,8 +30,10 @@ public class JwtAuthFilter extends OncePerRequestFilter {
 
         String path = request.getServletPath();
 
-        // Skip JWT check for public endpoints
-        if (path.startsWith("/auth") || path.startsWith("/media/") || path.startsWith("/files/")) {
+        // Skip JWT check for explicitly public endpoints
+        if (path.startsWith("/auth") ||
+            (path.startsWith("/media/") && path.endsWith("/stream")) ||
+            path.startsWith("/files/")) {
             filterChain.doFilter(request, response);
             return;
         }
@@ -42,11 +46,13 @@ public class JwtAuthFilter extends OncePerRequestFilter {
                 String email = claims.getSubject();
                 String role = claims.get("role", String.class);
 
-                var auth = new UsernamePasswordAuthenticationToken(email, null, java.util.Collections.emptyList());
+                // Map role to Spring Security authority
+                var authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role));
+                var auth = new UsernamePasswordAuthenticationToken(email, null, authorities);
                 auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+
                 SecurityContextHolder.getContext().setAuthentication(auth);
             } catch (Exception e) {
-                // Invalid token, clear security context
                 SecurityContextHolder.clearContext();
             }
         }
